--- a/optimus css/src/app/contact/contact.component.html
+++ b/optimus css/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="container has-text-centered">
       <div class="columns is-8 is-variable ">
         <div class="column is-two-thirds has-text-left has-text-centered-mobile">
-          <h1 class="title is-1  wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">Contact Us</h1>
+          <h1 class="title is-1  wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">Contact Me</h1>
           <p class="is-size-4 has-text-justified-mobile wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
             Please feel free to contact us directly should you have any questions.</p>
           <div class="social-media">
