--- a/optimus css/src/app/advantage/advantage.component.html
+++ b/optimus css/src/app/advantage/advantage.component.html
@@ -1,4 +1,4 @@
-  <section class="section COMPETITIVE">
+  <section class="section COMPETITIVE top100" >
 
      <div class="container top50 has-text-centered-mobile">
       <div class="column is-6-desktop is-7-tablet is-10-mobile is-offset-1-mobile">
