--- a/optimus css/src/app/contact/contact.component.html
+++ b/optimus css/src/app/contact/contact.component.html
@@ -3,22 +3,23 @@
     <div class="container has-text-centered">
       <div class="columns is-8 is-variable ">
         <div class="column is-two-thirds has-text-left has-text-centered-mobile">
-          <h1 class="title is-1  wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">Contact Me</h1>
+          <h1 class="title is-1  wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">Contact Us</h1>
           <p class="is-size-4 has-text-justified-mobile wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
             Please feel free to contact us directly should you have any questions.</p>
-          <div class="social-media">
-            <!--   <a href="https://facebook.com" target="_blank" class="button  is-large wow fadeInUp"  data-wow-duration=".8s" data-wow-delay=".7s"><i class="ion-logo-facebook" aria-hidden="true"></i></a>
-              <a href="https://instagram.com" target="_blank" class="button  is-large wow fadeInUp"  data-wow-duration=".8s" data-wow-delay=".8s"><i class="ion-logo-instagram" aria-hidden="true"></i></a>-->
-            <a href="mailto:info@optimusfm.co" class="button  is-large wow fadeInUp" data-wow-duration=".8s"
-              data-wow-delay=".9s"><i class="ion-ios-mail" aria-hidden="true"></i></a>
-            <a href="https://www.google.com/maps/dir/29.3830656,47.988736/optimusfm.co+location/@29.3804044,47.9873666,17z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3fcf85aa3f023d0f:0x391e2a312146a659!2m2!1d47.9898114!2d29.3777347"
-              target="_blank" class="button  is-large wow fadeInUp" data-wow-duration=".8s" data-wow-delay="1s"><i
-                class="ion-md-pin" aria-hidden="true"></i></a>
 
-            <a href="tel:22399997" class="button  is-large wow fadeInUp" data-wow-duration=".8s" data-wow-delay="1s"><i
-                class="ion-md-call" aria-hidden="true"></i></a>
-
-          </div>
+            
+            <div class="social-media">
+          
+              <a href="mailto:info@optimusfm.co" class="button  is-large wow fadeInUp" data-wow-duration=".8s"
+                data-wow-delay=".9s"><i class="ion-ios-mail" aria-hidden="true"></i></a>
+              <a href="https://www.google.com/maps/dir/29.3830656,47.988736/optimusfm.co+location/@29.3804044,47.9873666,17z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3fcf85aa3f023d0f:0x391e2a312146a659!2m2!1d47.9898114!2d29.3777347"
+                target="_blank" class="button  is-large wow fadeInUp" data-wow-duration=".8s" data-wow-delay="1s"><i
+                  class="ion-md-pin" aria-hidden="true"></i></a>
+  
+              <a href="tel:22399997" class="button  is-large wow fadeInUp" data-wow-duration=".8s" data-wow-delay="1s"><i
+                  class="ion-md-call" aria-hidden="true"></i></a>
+  
+            </div>
 
 
 
@@ -103,3 +104,6 @@
 <div i18n *ngIf="success" class="tag is-success success-alert">
   Congratulations. your message has been sent. Kindly await our reply.
 </div>
+
+  <!--   <a href="https://facebook.com" target="_blank" class="button  is-large wow fadeInUp"  data-wow-duration=".8s" data-wow-delay=".7s"><i class="ion-logo-facebook" aria-hidden="true"></i></a>
+              <a href="https://instagram.com" target="_blank" class="button  is-large wow fadeInUp"  data-wow-duration=".8s" data-wow-delay=".8s"><i class="ion-logo-instagram" aria-hidden="true"></i></a>-->
