--- a/optimus css/src/app/team/team.component.html
+++ b/optimus css/src/app/team/team.component.html
@@ -22,7 +22,7 @@
         <div class="column has-text-justified-mobile has-text-left-desktop has-text-left-tablet has-text-weight-bold has-text-justified-desktop is-10-mobile is-offset-1-mobile">
             <h1 class="subtitle has-text-centered-mobile is-3 wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="0.9s">Trust Us</h1>
              <p class="subtitle is-6 has-text-weight-bold wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="0.94s">Our team consists of highly experienced, innovative FM professionals, each having worked in senior operational FM roles within complex built environments and across challenging core businesses</p>
-             <p class="subtitle is-6 has-text-weight-bold wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="0.99s">We share a wealth of experiences from across the spectrum of Facility Management disciplines.</p>
+             <!-- <p class="subtitle is-6 has-text-weight-bold wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="0.99s">We share a wealth of experiences from across the spectrum of Facility Management disciplines.</p> -->
              <p class="subtitle is-6 has-text-weight-bold wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="1s">We share a wealth of experiences from across the spectrum of Facility Management disciplines.</p>
              <p class="subtitle is-6 has-text-weight-bold wow fadeInUp"  data-wow-duration=".8s" data-wow-delay="1.09s">
                We believe in being open, approachable and modest, while constantly striving to offer innovative and creative Facility Management solutions.
