--- a/optimus css/src/app/app.component.html
+++ b/optimus css/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <nav class="navbar is-fixed-top is-transparent" id="main-nav" role="navigation" aria-label="main navigation">
+  <nav class="navbar is-fixed-top" id="main-nav" role="navigation" aria-label="main navigation">     
     <span class="menu-trigger">
         <i class="menu-trigger-bar top"></i>
         <i class="menu-trigger-bar middle"></i>
@@ -25,35 +25,40 @@
      
 
       <div class="navbar-end">
-        <a [routerLink]="['/home/']" class="navbar-item homeButton ">
+        <a [routerLink]="['/home/']" routerLinkActive='active' class="navbar-item homeButton ">
           <span style="background-image: url(assets/images/svg/home-run.svg);"></span>
           Home
         </a>
-        <a [routerLink]="['/home']" class="navbar-item aboutButton ">
+        <a [routerLink]="['/home']"   class="navbar-item aboutButton ">
           <span style="background-image: url(assets/images/svg/question.svg);"></span>
           About us
         </a>
-        <a [routerLink]="['/services/']" class="navbar-item servicesButton">
+        <a [routerLink]="['/services/']" routerLinkActive='active'   class="navbar-item servicesButton">
           <span style="background-image: url(assets/images/svg/support2.svg);"></span>
 
           Services
         </a>
-        <a [routerLink]="['/cafm/']" class="navbar-item CAFMButton">
+        <a [routerLink]="['/cafm/']" routerLinkActive='active'   class="navbar-item CAFMButton">
           <span style="background-image: url(assets/images/svg/cloud-computing.svg);"></span>
 
           CAFM
         </a>
-         <a [routerLink]="['/advantage/']" class="navbar-item advantageButton">
+         <a [routerLink]="['/advantage/']" routerLinkActive='active'   class="navbar-item advantageButton">
           <span style="background-image: url(assets/images/svg/cheap.svg);"></span>
 
           Advantage
         </a>
-        <a [routerLink]="['/team/']" class="navbar-item teamButton">
+        <a [routerLink]="['/projects/']" routerLinkActive='active'   class="navbar-item CAFMButton">
+          <span style="background-image: url(assets/images/building.png);"></span>
+
+          Projects
+        </a>
+        <a [routerLink]="['/team/']"  routerLinkActive='active'  class="navbar-item teamButton">
           <span style="background-image: url(assets/images/svg/team.svg);"></span>
 
           Our Team
         </a>
-        <a [routerLink]="['/contact/']" class="navbar-item contactButton">
+        <a [routerLink]="['/contact/']" routerLinkActive='active'  class="navbar-item contactButton">
           <span style="background-image: url(assets/images/svg/contact-us.svg);"></span>
 
           Contact us
@@ -102,6 +107,12 @@
               </a>
             </li>
             <li>
+              <a [routerLink] = "['/projects']"  class="navbar-item">
+               <span style="background-image: url(assets/images/building.png);"></span>
+               Projects
+             </a>
+           </li>
+            <li>
               <a [routerLink] = "['/team']"  class="navbar-item teamButton">
                 <span></span>
                 Our Team
@@ -141,7 +152,7 @@
       </section>
        <div class="content has-text-centered " style="z-index: 1111;">
               <h1 class="white subtitle is-6 has-text-weight-light higher-z">   © Copyright {{ anio }}  Optimus FM. All rights reserved.</h1>
-              <h6 class="white   has-text-weight-light higher-z " style="font-size: 12px">Developed by <a class="gold" href="https://nirrob.com">Nirrob</a> </h6>
+              <h6 class="white   has-text-weight-light higher-z " style="font-size: 12px">Developed by <a class="gold" href="mailto:ibrahimgomaa17@gmail.com">Ibrahim Mohamed</a> </h6>
             </div>
   </footer>
 </main>
